# Macro_Trading

./: .claudeignore  .env.example  .env.production  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: gsd-file-manifest.json
.claude/rules/: Data_Architecture_Blueprint_MacroHedgeFund.md  GUIA_COMPLETO_CLAUDE_CODE_Fase0.md
.dagster/: dagster.yaml
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PHASE0_GAP_ANALYSIS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v4.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_instrument_type_contract_specs.py  003_add_agent_reports_table.py  004_add_strategy_signals_backtest.py  005_create_pipeline_runs.py  006_add_strategy_state_enhance_backtest_results.py  007_create_nlp_documents_table.py  008_create_portfolio_state_table.py  009_create_pms_tables.py  010_create_portfolio_returns.py
docs/: AUDIT_REMEDIATION_PLAN.md  CODEBASE_AUDIT.md  DR_PLAYBOOK.md  FRONTEND_DELIVERY_REVIEW.md  FRONTEND_IMPROVEMENT_PLAN.md  GOLIVE_CHECKLIST.md  GO_LIVE_PLAN.md  GUIA_COMPLETO_CLAUDE_CODE_Fase1.md  GUIA_COMPLETO_CLAUDE_CODE_Fase2.md  GUIA_COMPLETO_CLAUDE_CODE_Fase3.md  GUIA_COMPLETO_CLAUDE_CODE_Fase3_PMS.md  OPERATIONAL_RUNBOOK.md  Phase_0_Action_Plan.md  Phase_11_Action_Plan.md  Phase_12_Action_Plan.md  Phase_13_Action_Plan.md  Phase_16_Action_Plan.md  Phase_18_Action_Plan.md  Phase_19_Action_Plan.md  Phase_1_Action_Plan.md  Phase_2_Action_Plan.md  Phase_3_Action_Plan.md  SOP_MACRO_TRADING_SYSTEM.md  TECHNICAL_AUDIT_REPORT.md  analise_critica_golden_bird.md  analise_golden_bird_vs_macro_trading.md  golden_bird_execution_plan.md
nginx/: nginx.conf
scripts/: backfill.py  backup.sh  daily_run.py  deploy.sh  init_data.py  restore.sh  seed_instruments.py  seed_series_metadata.py  verify_connectivity.py  verify_infrastructure.py  verify_phase2.py  verify_phase3.py
src/agents/: __init__.py  base.py  consistency_checker.py  fx_agent.py  (+8 more)
tests/: conftest.py  test_backtesting.py  test_backtesting_analytics.py  test_backtesting_signal_adapter.py  test_backtesting_v2.py  test_black_litterman.py  test_consistency_checker.py  test_copom_scraper.py  test_cross_asset_agent.py  test_cross_asset_view.py  test_fiscal_agent.py  test_fomc_scraper.py  test_fx_agent.py  test_hmm_regime.py  test_inflation_agent.py  test_monetary_agent.py  test_nlp_processor.py  test_pms_models.py  test_portfolio_api_v2.py  test_position_sizer.py  test_sentiment_analyzer.py  test_signal_aggregator_v2.py  test_signal_monitor.py  test_stress_tester_v2.py  test_var_calculator_v2.py
(+488 files in other folders)
